--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: techfeed
+name: techFeed
 description: Simple app to read tech related news.
 
 
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.13.4
   url_launcher: ^6.0.18
   html: ^0.15.0
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
 
